# Markerless-Human-Tracking

./: .gitignore  README.md  config.ini
conda-environment/: dlc-windowsGPU.yaml  pf-markerless3d-GPU.yaml
src/: constants.py  cuantitative_analysis.py  image_file_renaming.py  point_helpers.py  points.csv  points.xyz  setup3d.py
triangulationSFM/: CMakeLists.txt  Camera.cpp  Camera.h  Frame.cpp  Frame.h  Marker.cpp  Marker.h  TriangulationSystem.cpp  TriangulationSystem.h  main.cpp
